// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON-LD Schemas An editorial content page has website, breadcrumb, and blog post schemas 1`] = `
Array [
  Object {
    "@context": "http://schema.org",
    "@type": "WebSite",
    "alternateName": "danny.codes",
    "image": Object {
      "@type": "ImageObject",
      "url": "https://danny.codes/icons/icon-256x256.png",
    },
    "name": "Hello, world!",
    "url": "https://danny.codes/blog/hello-world",
  },
  Object {
    "@context": "https://danny.codes",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "https://danny.codes/blog/hello-world",
          "image": "https://danny.codes/icons/icon-512x512.png",
          "name": "Hello, world!",
        },
        "position": 1,
      },
    ],
  },
  Object {
    "@context": "https://danny.codes",
    "@type": "BlogPosting",
    "alternateName": "danny.codes",
    "author": Object {
      "@type": "Person",
      "name": "Dan Morgan",
    },
    "datePublished": "2019/01/21",
    "description": "This is a mock blog post description",
    "headline": "Hello, world!",
    "image": Object {
      "@type": "ImageObject",
      "url": "https://danny.codes/icons/icon-512x512.png",
    },
    "mainEntityOfPage": Object {
      "@id": "https://danny.codes",
      "@type": "WebSite",
    },
    "name": "Hello, world!",
    "publisher": Object {
      "@type": "Organization",
      "logo": "https://danny.codes/icons/icon-256x256.png",
      "name": "Dan Morgan",
      "url": "https://danny.codes",
    },
    "url": "https://danny.codes/blog/hello-world",
  },
]
`;

exports[`JSON-LD Schemas An internal page has website and breadcrumb schemas 1`] = `
Array [
  Object {
    "@context": "http://schema.org",
    "@type": "WebSite",
    "alternateName": "danny.codes",
    "image": Object {
      "@type": "ImageObject",
      "url": "https://danny.codes/icons/icon-256x256.png",
    },
    "name": "About",
    "url": "https://danny.codes/about",
  },
  Object {
    "@context": "https://danny.codes",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "https://danny.codes/about",
          "image": "https://danny.codes/icons/icon-512x512.png",
          "name": "About",
        },
        "position": 1,
      },
    ],
  },
]
`;

exports[`JSON-LD Schemas The homepage has only website schema 1`] = `
Array [
  Object {
    "@context": "http://schema.org",
    "@type": "WebSite",
    "alternateName": "danny.codes",
    "image": Object {
      "@type": "ImageObject",
      "url": "https://danny.codes/icons/icon-256x256.png",
    },
    "name": "Home",
    "url": "https://danny.codes",
  },
]
`;
